--- a/app/views/mafia.html
+++ b/app/views/mafia.html
@@ -1,1 +1,83 @@
-<h1>Mafia view</h1>
+<div ng-controller="DocumentsCtrl">
+
+<div class="col-md-11 col-md-offset-1"><!--contenu-->
+  <div class="col-md-12 mainMafiaOrganigramme">
+   <div class="col-md-6" ><!--piecess a conviction liste-->
+     <div class="col-md-12 piece">  <!--piece a conviction galerie thumbs-->
+      <div class="table-responsive">
+  <table class="table organigramme">
+    <thead>
+      <th colspan="4">
+           <img src="img/mafiosiAvatar.png"class="img-responsive img-round" alt="...">
+           <h1>Paolo Salvatore <span> - Boss</span></h1>
+           <h2>"Don Pellegrino"</h2>
+      </th>
+    </thead>
+
+    <tbody>
+      <tr>
+      <td>
+      <img src="img/mafiosiAvatar.png"class="img-responsive img-round" alt="...">
+           <h1>Rage <span>- Boss</span></h1>
+           <h2>"Don Pellegrino"</h2>
+           </td>
+      <td>  <img src="img/mafiosiAvatar.png"class="img-responsive img-round" alt="...">
+           <h1>Rage <span> - Sousboss</span></h1>
+           <h2>"Don Pellegrino"</h2></td>
+      <td>  <img src="img/mafiosiAvatar.png"class="img-responsive img-round" alt="...">
+           <h1>Rage <span> - Conseillere</span></h1>
+           <h2>"Don Pellegrino"</h2></td>
+      <td></td>
+      </tr>
+
+         <tr>
+      <td>
+      <img src="img/mafiosiAvatar.png"class="img-responsive img-round" alt="...">
+           <h1>Rage <span> - Boss</span></h1>
+           <h2>"Don Pellegrino"</h2>
+           </td>
+      <td>  <img src="img/mafiosiAvatar.png"class="img-responsive img-round" alt="...">
+           <h1>Rage <span> - Boss</span></h1>
+           <h2>"Don Pellegrino"</h2></td>
+      <td>  <img src="img/mafiosiAvatar.png"class="img-responsive img-round" alt="...">
+           <h1>Rage <span> - Boss</span></h1>
+           <h2>"Don Pellegrino"</h2></td>
+           <td>  <img src="img/mafiosiAvatar.png"class="img-responsive img-round" alt="...">
+           <h1>Rage <span> - Boss</span></h1>
+           <h2>"Don Pellegrino"</h2></td>
+      </tr>
+
+            <tr>
+      <td>
+      <img src="img/mafiosiAvatar.png"class="img-responsive img-round" alt="...">
+           <h1>Rage <span> - Associé</span></h1>
+           <h2>"Don Pellegrino"</h2>
+           </td>
+      <td>  <img src="img/mafiosiAvatar.png"class="img-responsive img-round" alt="...">
+           <h1>Rage <span> - Soldat</span></h1>
+           <h2>"Don Pellegrino"</h2></td>
+      <td>  <img src="img/mafiosiAvatar.png"class="img-responsive img-round" alt="...">
+           <h1>Rage <span> - Soldat</span></h1>
+           <h2>"Don Pellegrino"</h2></td>
+           <td>  <img src="img/mafiosiAvatar.png"class="img-responsive img-round" alt="...">
+           <h1>Rage <span> - Soldat</span></h1>
+           <h2>"Don Pellegrino"</h2></td>
+      </tr>
+
+
+    </tbody>
+
+
+  </table>
+</div>
+    </div><!--\pieces a conviction liste -->
+</div><!-- \.pieces a conviction-->
+<!--Afficher une image TODO: gérer les clicks-->
+<div class="col-md-6 imgGD">
+  <h1>TitrePhoto</h1>
+  <img src="img/imgPieceAConviction/imgPCA.png"class="img-responsive" alt="Cinque Terre" width="100%">
+  <p>Small description</p>
+</div><!---->
+</div>
+</div><!--\.contenu-->
+</div>
