--- a/app/views/actions.html
+++ b/app/views/actions.html
@@ -17,7 +17,9 @@
         <div ng-controller="SectorsCtrl" class="col-md-12 mainDaschboard"> <!-- DashboardControll" -->
             <div class="row contentDashboardRow">
                 <section class="col-md-offset-1 col-md-1" >
-                    <img src="img/iconesAction.png"class="img-responsive img-rounded" alt="Cinque Terre">
+<!--                     <img src="img/iconesAction.png"class="img-responsive img-rounded" alt="Cinque Terre"> -->
+						
+                    <span id="actiondetail" class="icon-dechet_lac icon-actionlist"></span>
                 </section>
                 <section class="col-md-4 contentDashboard"> <!-- Action -->
                     <h1>Titre</h1>
@@ -52,11 +54,11 @@
 
                 <section class="col-md-2"><!-- ActionList -->
                     <h1>Action list</h1>
-                    <span class="icon-iconeRound icon-actionlist active"></span>
-                    <span class="icon-iconeRound icon-actionlist"></span>
-                    <span class="icon-iconeRound icon-actionlist"></span>
-                    <span class="icon-iconeRound icon-actionlist"></span>
-                    <span class="icon-iconeRound icon-actionlist"></span>
+                    <span class="icon-hydrante icon-actionlist active"></span>
+                    <span class="icon-cuve_recup icon-actionlist"></span>
+                    <span class="icon-block_prod icon-actionlist"></span>
+                    <span class="icon-ctrl_canaux icon-actionlist"></span>
+                    <span class="icon-label icon-actionlist"></span>
                 </section><!--\.ActionList-->
 
             </div>
