--- a/app/styles/bootstrap.css
+++ b/app/styles/bootstrap.css
@@ -21,6 +21,9 @@ body {
 .mainMafiaOrganigramme {
   margin-top: 75px;
 }
+.mafiaContent {
+  margin-top: 100px;
+}
 .organigramme h1 {
   font-size: 1.5em;
   margin: 0px;
