--- a/app/views/navbar.html
+++ b/app/views/navbar.html
@@ -22,8 +22,10 @@
                 </li>
                 <li ng-class="{active: mafiaBtn}">
                     <a ng-href="#/mafia" ng-click="goToMafia()">
+
                         <span class="icon-sidenav-mafia"></span>
-                        <p>mafia</p>
+                        <p>mafia  <span class="badge badgePimp">42</span></p>
+                       
                     </a>
                 </li>
             </ul>
