--- a/app/styles/bootstrap.css
+++ b/app/styles/bootstrap.css
@@ -18,6 +18,23 @@ body {
   padding: 0;
   background-image: url('../img/halftoneDark.png');
 }
+.thumbIcones {
+  text-align: center;
+}
+.thumbIcones a {
+  color: #817874;
+}
+.thumbIcones i {
+  width: 50px;
+  height: 50px;
+  font-size: 1.2em;
+  color: #817874;
+  background-color: white;
+  border-radius: 100px;
+  padding: 15px 0px;
+  margin-top: -25px;
+  border: solid 3px #817874;
+}
 .mainMafiaOrganigramme {
   margin-top: 75px;
 }
@@ -416,7 +433,7 @@ div.header {
 }
 /* ---- Timeline ---- */
 .timeline {
-  margin-top: 0px;
+  margin-top: 90px;
   /* ---- Timeline elements ---- */
   /* ---- Details ---- */
   /* ---- Hover effects ---- */
@@ -456,7 +473,8 @@ div.header {
   float: left;
   width: 35px;
   transform: rotate(-45deg);
-  font: bold 14px arial;
+  font: 1.2em "hoverageregular", Helvetica, Arial, sans-serif;
+  color: #14333d;
 }
 @media (max-width: 1300px) {
   .timeline li {
@@ -466,7 +484,8 @@ div.header {
     float: left;
     width: 25px;
     transform: rotate(-45deg);
-    font: bold 12px arial;
+    font: 1em "hoverageregular", Helvetica, Arial, sans-serif;
+    color: #14333d;
   }
 }
 .timeline li::before {
@@ -512,7 +531,7 @@ div.header {
 }
 .timeline li:hover::before {
   top: 1px;
-  left: -31px;
+  left: -30px;
   width: 8px;
   height: 8px;
   border-width: 5px;
@@ -6241,13 +6260,12 @@ a.label:focus {
   min-width: 10px;
   padding: 3px 7px;
   font-size: 12px;
-  font-weight: bold;
   color: #ffffff;
   line-height: 1;
   vertical-align: baseline;
   white-space: nowrap;
   text-align: center;
-  background-color: #777777;
+  background-color: #ea590c;
   border-radius: 10px;
 }
 .badge:empty {
@@ -6281,6 +6299,14 @@ a.badge:focus {
 }
 .nav-pills > li > a > .badge {
   margin-left: 3px;
+}
+#navBar .badge {
+  font-size: 1em !important;
+  background-color: #ea590c !important;
+}
+.badgePimp {
+  font-size: 1em !important;
+  background-color: #ea590c !important;
 }
 .jumbotron {
   padding: 30px 15px;
