--- a/app/views/tactic.html
+++ b/app/views/tactic.html
@@ -50,7 +50,7 @@
           </table>
         </section>
         <section class="col-md-2 col-md-offset-1 pull-down dash_btn">
-          <button type="button" class="btn btn-default btn-dash">EFFECTUER</button>
+          <button type="button" class="btn btn-default btn-dash" ng-click="makeAction()">EFFECTUER</button>
         </section>
       </div>
       <div class="row">
