--- a/app/views/documents.html
+++ b/app/views/documents.html
@@ -36,6 +36,15 @@
 <div class="col-md-6 imgGD" ng-hide="showDesc">
   <h1>{{imgGD_title}}</h1>
   <img src="{{imgGD_link}}"class="img-responsive" alt="{{imgGD_title}}" width="100%">
+
+
+<div class="flex-video widescreen" style="margin: 0 auto;text-align:center;">
+ <iframe allowfullscreen="" src="http://player.vimeo.com/video/71876963" frameborder="0" width="500" height="281"></iframe>
+  </div> 
+
+
+
+
 </div><!---->
 </div>
 </div><!--\.contenu-->
