--- a/app/views/headerGame.html
+++ b/app/views/headerGame.html
@@ -1,7 +1,7 @@
 <nav id="header" class="navbar navbar-inverse navbar-fixed-top"  ng-controller="mainBarGameController">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand"></a>
+            <a class="navbar-brand" ng-controller="GameCoreCtrl"></a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <div class="xp_wrapper col-sm-5 col-sm-offset-4">
