--- a/app/views/tactic.html
+++ b/app/views/tactic.html
@@ -18,7 +18,7 @@
     <div ng-controller="SectorsCtrl" class="col-md-12 mainDaschboard" > <!-- DashboardControll" -->
       <div class="row contentDashboardRow">
         <section class="col-md-offset-1 col-md-1 contentActionLogo" >
-                  <span id="actiondetail" class="icon-dechet_lac icon-actionlist"></span>
+                  <span id="actiondetail" class="icon-{{actionSelected.type}} icon-actionlist"></span>
         </section>
         <section class="col-md-4 contentDashboard">
           <h1>{{actionSelected.name}}</h1>
@@ -66,7 +66,7 @@
         </section>
         <section class="col-md-3 col-md-offset-1">
           <div class="dash_influence">
-            <div ang:round:progress data-round-progress-model="roundProgressData"></div>
+            <div ang:round:progress data-round-progress-model="progressInfluence"></div>
             
             <div class="influence">
               <h1>influence</h1>
