--- a/app/views/tactic.html
+++ b/app/views/tactic.html
@@ -76,7 +76,7 @@
             <div class="secteur">
               <div class="secteur_qte">
              <!-- KURWAAA!!!!!!!!!! -->
-                <p><i>2</i> - {{sectorSelected.nbActions}}</p>
+                <p><i>{{nbActionPerformed}}</i> - {{sectorSelected.nbActions}}</p>
               </div>
               <div class="secteur_titre">
                 <h1>Actions</h1>
