--- a/app/views/tactic.html
+++ b/app/views/tactic.html
@@ -52,7 +52,7 @@
           </table>
         </section>
         <section class="col-md-2 col-md-offset-1 pull-down dash_btn">
-          <button type="button" class="btn btn-default btn-dash" ng-click="makeAction()">EFFECTUER</button>
+          <button type="button" class="btn btn-default btn-dash" ng-click="makeAction(actionSelected.id)">EFFECTUER</button>
         </section>
       </div>
       <div class="row">
