--- a/app/styles/bootstrap.css
+++ b/app/styles/bootstrap.css
@@ -30,6 +30,10 @@ body,
 .imgGD p {
   font-size: 1.4em;
 }
+.iconeReturn {
+  float: left;
+  margin-right: 5px;
+}
 .organigramme h1 {
   font-size: 1.2em;
   margin: 10px 0px 0px 0px;
@@ -101,7 +105,7 @@ body {
   margin-top: 100px;
 }
 span#actiondetail {
-  font-size: 5vw;
+  font-size: 7vw;
 }
 span.icon-actionlist {
   font-size: 2vw;
