--- a/app/styles/bootstrap.css
+++ b/app/styles/bootstrap.css
@@ -5289,19 +5289,28 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
     background-size: auto auto;
   }
 }
+#header #navbar i {
+  margin-right: 5px;
+}
+#header #navbar .userInfos {
+  margin-left: 15px;
+}
+#header #navbar span {
+  width: 100%;
+  font-size: 1.2em;
+}
 #header #navbar .xp_wrapper {
   float: left;
 }
 #header #navbar .xp_wrapper .xp {
-  float: left;
   font-size: 25px;
-  margin: 13px 0 0;
+  margin: 10px 0 0;
 }
 #header #navbar .xp_wrapper .loader_wrap {
   float: right;
-  margin: 17px 0 0;
+  margin: 0 0 0 0;
   height: 20px;
-  width: 93%;
+  width: 100%;
   border: solid 1px #eeece1;
 }
 #header #navbar .xp_wrapper .loader_wrap .fill {
