--- a/app/views/headerGame.html
+++ b/app/views/headerGame.html
@@ -3,19 +3,43 @@
         <div class="navbar-header">
             <a class="navbar-brand" ng-controller="GameCoreCtrl"></a>
         </div>
+
+
+
+
         <div id="navbar" class="navbar-collapse collapse">
-            <div class="xp_wrapper col-sm-5 col-sm-offset-4">
-                <p class="xp">xp</p>
+
+          <div class="xp_wrapper col-md-1 col-md-offset-3">
+              
+            </div>
+
+
+            <div class="xp_wrapper col-md-4">
+
+             
+                <span class="xp">xp </span>
+                <span ng-bind="nbXP"></span><span>pts</span> <span ng-show="level<12">/</span> 
+                <span ng-bind="nextLvlXP" ng-show="level<12"></span><span ng-show="level<12">pts</span>
+               
+                <i class="glyphicon glyphicon-star userInfos"></i>
+                <span ng-bind="playerRank | uppercase"></span>
+                <span ng-bind="playerInfos"></span>
+                
+               
                 <div class="loader_wrap">
                     <div class="fill" ng-style="progressBar">
-                        <p><span ng-bind="nbXP"></span><span>pts</span> <span ng-show="level<12">/</span> <span ng-bind="nextLvlXP" ng-show="level<12"></span><span ng-show="level<12">pts</span></p>
                     </div>
                 </div>
-                <p class="grade"><span ng-bind="playerRank"></span> <span ng-bind="playerInfos"></span></p>
             </div>
+
+           
+
+
+
             <ul class="nav navbar-nav navbar-right">
                 <li><a ng-href="#/" ng-click="logoutFunc()"><img src="img/logout.svg" height="30px" width="30px" alt="Logout" /></a></li>
             </ul>
         </div>
     </div>
 </nav>
+
