add round progress animation

--- a/app/views/tactic.html
+++ b/app/views/tactic.html
@@ -104,7 +104,7 @@
                 </section>
               -->
               <section class="col-md-2">
-                <h1>Action list</h1>
+                <h1>Liste des actions disponible sur ce secteur</h1>
                 <div class="iconeReturn" ng-repeat="action in sectorSelected.actionsPolygon" >
                 <span class="icon-{{action.type}} icon-actionlist icon-btn active" action-name="{{action.name}}" ng-click="updateActionDescription(action)"></span>
                 </div>
