work on dashboard, extend root scope

--- a/app/views/actions.html
+++ b/app/views/actions.html
@@ -37,13 +37,13 @@
                             <th>XP min</th>
                             <td>{{markerSelected.properties.accessLevel}}</td>
                         </tr>
-                        <tr>
+                        <!--<tr>
                             <th>Influence prévue</th>
                             <td>56%</td>
-                        </tr>
+                        </tr>-->
                         <tr>
                             <th>baisse</th>
-                            <td>1,5%</td>
+                            <td>{{markerSelected.expectedDrop}}%</td>
                         </tr>
                         <tr>
                             <th>cooldown</th>
