--- a/app/styles/bootstrap.css
+++ b/app/styles/bootstrap.css
@@ -10,21 +10,21 @@ body,
   height: 100%;
 }
 .contentDashboard h1 {
-  font-size: 1.5em;
+  font-size: 1.6em;
   font-family: "hoverageregular", Helvetica, Arial, sans-serif;
 }
 .contentDashboard p {
   font-size: 1.4em;
 }
 .piece h1 {
-  font-size: 1.5em;
+  font-size: 1.6em;
   font-family: "hoverageregular", Helvetica, Arial, sans-serif;
 }
 .piece p {
   font-size: 1.4em;
 }
 .imgGD h1 {
-  font-size: 1.5em;
+  font-size: 1.6em;
   font-family: "hoverageregular", Helvetica, Arial, sans-serif;
 }
 .imgGD p {
@@ -670,6 +670,85 @@ div.header {
 }
 .imgGD.ng-hide {
   opacity: 0;
+}
+.notifResistance a {
+  padding: 0px;
+}
+.notifResistance .badge {
+  background-color: #d3d3d3;
+  border: solid 2px #6b7f7f;
+  vertical-align: top;
+  width: auto;
+}
+.notifResistance .icoResistance {
+  color: #6b7f7f;
+  font-size: 50px;
+}
+.notifResistance .divider {
+  clear: both;
+}
+.notifResistance .moreNotification {
+  text-align: center;
+  font-style: italic;
+}
+.notifResistance section {
+  padding: 5px;
+  min-width: 400px;
+  margin: 5px 0;
+}
+.notifResistance section h1 {
+  font-size: 1.8em;
+  margin: 0px;
+  color: #14333d;
+}
+.notifResistance section p {
+  font-size: 1.2em;
+  margin: 0px;
+  color: #14333d;
+}
+.notifResistance section a {
+  font-size: 1em;
+}
+.notifResistance section .closeNotification {
+  font-size: 0.8em;
+}
+.notifResistance section .closeNotification a {
+  color: #817874;
+}
+.piecesConviction {
+  margin-top: 100px;
+}
+.piecesCollection {
+  boder: solid 2px #cccccc;
+}
+.piecesCollection h1 {
+  font-size: 1.6em;
+  font-family: "hoverageregular", Helvetica, Arial, sans-serif;
+}
+.piecesCollection p {
+  font-size: 1.4em;
+}
+.piecesCollection img {
+  float: left;
+  width: 180px;
+}
+.piecesCollection img:hover {
+  -webkit-transition: 1s ease-in-out;
+  -moz-transition: 1s ease-in-out;
+  -o-transition: 1s ease-in-out;
+  transition: 1s ease-in-out;
+  cursor: pointer;
+  -ms-transform: rotate(3deg);
+  /* IE 9 */
+  -webkit-transform: rotate(3deg);
+  /* Chrome, Safari, Opera */
+  transform: rotate(3deg);
+}
+.piecesCollection img:last-child {
+  margin-right: 0px;
+}
+.piecesCollection .imgPiecesCollection {
+  margin-right: 25px;
 }
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
 html {
@@ -4105,10 +4184,10 @@ tbody.collapse.in {
   list-style: none;
   font-size: 14px;
   text-align: left;
+  background-image: url('../img/halftone.png');
   background-color: #ffffff;
-  border: 1px solid #cccccc;
-  border: 1px solid rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
+  border: 2px solid #cccccc;
+  border: 2px solid #2b1a11;
   -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
   background-clip: padding-box;
@@ -4121,7 +4200,7 @@ tbody.collapse.in {
   height: 1px;
   margin: 9px 0;
   overflow: hidden;
-  background-color: #e5e5e5;
+  background-color: #cccccc;
 }
 .dropdown-menu > li > a {
   display: block;
