--- a/app/views/documents.html
+++ b/app/views/documents.html
@@ -1,54 +1,69 @@
 <div ng-controller="DocumentsCtrl">
-  <div class="timeline"> <!-- TimeLine-->
-    <div class="col-md-11 col-md-offset-1" >
-      <div class="col-md-12">
-        <ol><!--dates-->
-          <li ng-repeat="document in documentsList" ><!--date-->
-            <a href="">
-              {{document.date | date:'dd/mm/yyyy'}}
-            </a>
-    <!--<span class="details">
-      {{document.desc}}
-    </span>--> 
-  </li><!--\.date-->
-</ol><!--\.dates-->
-</div>
-</div>
-</div><!--\.end TimeLine-->
-<div class="col-md-11 col-md-offset-1"><!--contenu-->
-  <div class="col-md-12">
-   <div class="col-md-6" ><!--piecess a conviction liste-->
-     <div class="col-md-12 piece" ng-repeat="document in documentsList" id="{{document.date | date:'dd/mm/yyyy'}}">  <!--piece a conviction galerie thumbs-->
-      <h1><span class="date">{{document.date | date:'dd/mm/yyyy'}} </span> - {{document.description | uppercase}}</h1>
-      <p>{{document.description}}</p>
-      <div class="row"><!-- images -->
-        <!--Image-->
-        <div class="col-md-3 thumbIcones" ng-repeat="doc in document.documents">
-         <a href="" ng-click="showDocumentContent(doc)" class="thumbnail imgThumb" >
-          <img src="{{doc.thumbnail}}"class="img-responsive" alt="{{doc.title}}">
-          <i class="glyphicon glyphicon-{{doc.type | convertName}}"></i>
-        </a>
+
+
+  <div class="col-md-11 col-md-offset-1"><!--contenu-->
+    <div class="col-md-12 piecesConviction">
+
+
+    <div class="col-md-3 piecesCollection">
+        <h1>Titre</h1>
+        <p>description dsafsdaf asdf sdf asdf asdf   ads f ads f ds a f dsa f  ads fdas fads f dsf dsaf ads  f adf ds </p>   
+
+        <div imgPiecesCollection>
+       
+          <div imgPiecesCollection>
+          <img src="img/pceConvictionTest_thumb2.png"  class="img-responsive">
+            </div>   
+             <div imgPiecesCollection>
+          <img src="img/pceConvictionTest_thumb2.png"  class="img-responsive">
+            </div>   
+             <div imgPiecesCollection>
+          <img src="img/pceConvictionTest_thumb2.png"  class="img-responsive">
+            </div>
       </div>
-      <!--\.image-->  
-    </div><!-- \. images -->
-  </div><!--\pieces a conviction liste -->
-</div><!-- \.pieces a conviction-->
-<div class="col-md-6 imgGD" ng-hide="showDesc">
-  <h1>{{document_title}} <span>- {{document_xp}} XP</span></h1>
-  
-<div ng-show="isPicture">
-  <img src="img/04_02_TXT_FR.jpg" class="img-responsive" alt="{{document_title}}" width="100%">
-</div>
-
-<div ng-show="isVideo">
-  <div class="flex-video widescreen" style="margin: 0 auto;text-align:center;">
-   <iframe allowfullscreen="" src="http://player.vimeo.com/video/71876963" frameborder="0" width="500" height="281"></iframe>
- </div> 
-</div>
+    </div>
 
 
+    <div class="col-md-3 piecesCollection">
+        <h1>Titre</h1>
+        <p>description dsafsdaf asdf sdf asdf asdf   ads f ads f ds a f dsa f  ads fdas fads f dsf dsaf ads  f adf ds </p>   
 
-</div><!---->
-</div>
+        <div imgPiecesCollection>
+          <img src="img/pceConvictionTest_thumb2.png"  class="img-responsive">
+            </div>
+            <div imgPiecesCollection>
+          <img src="img/pceConvictionTest_thumb.png"  class="img-responsive">
+             </div>
+    
+    </div>
+
+    <div class="col-md-3 piecesCollection">
+        <h1>Titre</h1>
+        <p>description dsafsdaf asdf sdf asdf asdf   ads f ads f ds a f dsa f  ads fdas fads f dsf dsaf ads  f adf ds </p>   
+
+        <div imgPiecesCollection>
+          <img src="img/pceConvictionTest_thumb2.png"  class="img-responsive">
+            </div>
+            <div imgPiecesCollection>
+          <img src="img/pceConvictionTest_thumb.png"  class="img-responsive">
+             </div>
+    
+    </div>
+
+    <div class="col-md-3 piecesCollection">
+        <h1>Titre</h1>
+        <p>description dsafsdaf asdf sdf asdf asdf   ads f ads f ds a f dsa f  ads fdas fads f dsf dsaf ads  f adf ds </p>   
+
+        <div imgPiecesCollection>
+          <img src="img/pceConvictionTest_thumb2.png"  class="img-responsive">
+            </div>
+    
+    </div>
+
+    
+
+
+
+    </div><!---->
+  </div>
 </div><!--\.contenu-->
-</div>
