--- a/app/views/headerGame.html
+++ b/app/views/headerGame.html
@@ -24,6 +24,10 @@
                 <i class="glyphicon glyphicon-star userInfos"></i>
                 <span ng-bind="playerRank | uppercase"></span>
                 <span ng-bind="playerInfos"></span>
+
+
+
+
                 
                
                 <div class="loader_wrap">
@@ -31,6 +35,53 @@
                     </div>
                 </div>
             </div>
+
+
+
+
+             <ul class="nav navbar-nav notifResistance">
+        <li class="dropdown">
+          <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="icoResistance glyphicon glyphicon-user"></i><i class="badge">99</i></a>
+          <ul class="dropdown-menu" role="menu">
+
+            <li>
+                <section class="row">
+                <div class="col-md-11">
+                  <h1>TitreNotife</h1>
+                  <p>Text...</p>
+                </div>
+                <div class="col-md-1 closeNotification">
+                  <a href="#"><span class="icon-cross"></span></a>                  
+                </div>
+
+                </section>
+
+            </li>
+
+             <li class="divider"></li>
+
+            
+             <li>
+               <section class="row">
+                <div class="col-md-11">
+                  <h1>TitreNotife</h1>
+                  <p>Text...</p>
+                </div>
+                <div class="col-md-1 closeNotification">
+                  <a href="#"><span class="icon-cross"></span></a>                  
+                </div>
+
+                </section>
+             
+         
+              
+            </li>
+
+            <li class="divider"></li>
+            <li class="moreNotification"><a href="">plus de notification</a></li>
+          </ul>
+        </li>
+      </ul>
 
            
 
