--- a/app/css/leaflet.extra-markers.css
+++ b/app/css/leaflet.extra-markers.css
@@ -33,9 +33,13 @@
 /* Icons */
 .extra-marker i {
   color: #fff;
-  margin-top: 10px;
+  margin-top: 5px;
+  margin-left: 9px;
   display: inline-block;
-  font-size: 14px;
+  font-size: 24px;
+  position: absolute;
+  top: 0px;
+  left: 0px;
 }
 
 /* Semantic UI Fix */
